added edit contact functionality
