# aa_contacts/api/alliance/contacts.py
@@ -5,7 +5,7 @@ from ninja import Router, Path
 from allianceauth.authentication.models import CharacterOwnership
 from aa_contacts.models import AllianceToken, AllianceContact
 from aa_contacts.tasks import update_alliance_contacts
-from ..schema import ContactSchema
+from ..schema import ContactSchema, UpdateContactSchema
 
 router = Router()
 
@@ -48,5 +48,35 @@ def update_contacts(request, alliance_id: int = Path(...)):
         return 404, None
 
     update_alliance_contacts(alliance_id)
+
+    return 200, None
+
+
+@router.patch("/{int:contact_pk}", response={200: None, 403: None, 404: None})
+def edit_contact(request, data: UpdateContactSchema, contact_pk: int, alliance_id: int = Path(...)):
+    user: User = request.user
+
+    ownerships = CharacterOwnership.objects.filter(user=user)
+    if (
+        (not user.is_superuser and not ownerships.filter(character__alliance_id=alliance_id).exists())
+        or
+        (not user.has_perms(['aa_contacts.manage_alliance_contacts', 'aa_contacts.view_alliance_notes']))
+    ):
+        return 403, None
+
+    token = (
+        AllianceToken.visible_for(user)
+        .filter(alliance__alliance_id=alliance_id)
+    )
+    if not token.exists():
+        return 404, None
+
+    try:
+        contact: AllianceContact = AllianceContact.objects.get(pk=contact_pk, alliance__alliance_id=alliance_id)
+    except AllianceContact.DoesNotExist:
+        return 404, None
+
+    contact.notes = data.notes
+    contact.save(update_fields=['notes'])
 
     return 200, None
